Update manifest.json to specify background service worker type; modify popup.html and main.js for dynamic path handling; export ProxyManager and UserAgentManager classes

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div style="display: flex; align-items: center; gap: 12px; justify-content: space-between; width: 100%;">
             <div style="display: flex; align-items: center; gap: 10px;">
-            <img src="${iconUrl}" alt="FoxySpoofers Logo" style="width: 32px; height: 32px;">
+            <img src="{extensionPath}/icons/icon.png" alt="FoxySpoofers Logo" style="width: 32px; height: 32px;">
             <div class="logo" style="font-size: 1.3em; font-weight: 600;">
                 FoxySpoofers
                 <span style="color:gray; font-size:0.85em; margin-left:6px;">by fox3000foxy</span>
@@ -52,7 +52,7 @@
         <!-- Onglet Virtual Camera -->
         <section class="tab-content" id="tab-virtual-camera">
             <section class="video-section fade-in">
-                <span style="color: gray; font-size: 0.8em;">This instance only applies to ${domain}</span>
+                <span style="color: gray; font-size: 0.8em;">This instance only applies to {domain}</span>
                 <div class="video-wrapper">
                     <video id="video" controls muted loop playsinline></video>
                     <div class="video-overlay" id="video-overlay">
