--- a/popup/popup.html
+++ b/popup/popup.html
@@ -26,7 +26,7 @@
         <div class="status-indicator-multi">
             <div class="status-item">
                 <div class="status-dot" id="status-dot-camera"></div>
-                <span id="status-text-camera">Camera/Mic</span>
+                <span id="status-text-camera">Camera</span>
             </div>
             <div class="status-item">
                 <div class="status-dot" id="status-dot-geo"></div>
@@ -49,7 +49,7 @@
 
     <!-- Tab bar -->
     <nav class="tabs">
-        <button class="tab-btn active" data-tab="camera">Camera/Mic</button>
+        <button class="tab-btn active" data-tab="camera">Camera</button>
         <button class="tab-btn" data-tab="geolocation">Geolocation</button>
         <button class="tab-btn" data-tab="proxy">Proxy</button>
         <button class="tab-btn" data-tab="browser">Browser</button>
@@ -57,7 +57,7 @@
     </nav>
 
     <main>
-        <!-- Camera/Mic Tab -->
+        <!-- Camera Tab -->
         <section class="tab-content active" id="tab-camera">
             <section class="video-section fade-in">
                 <span style="color: gray; font-size: 0.8em;justify-content: center; display: flex;">This spoof only applies to {domain}</span>
