fix: Update camera tab message to clarify indexedDB limitation for virtual camera

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -60,7 +60,7 @@
         <!-- Camera Tab -->
         <section class="tab-content active" id="tab-camera">
             <section class="video-section fade-in">
-                <span style="color: gray; font-size: 0.8em;justify-content: center; display: flex;">This spoof only applies to {domain}</span>
+                <span style="color: gray; font-size: 0.8em;justify-content: center; display: flex;">Due to indexedDB limitation, this virtual camera only applies to {domain}</span>
                 <div class="video-wrapper">
                     <video id="video" controls muted loop playsinline></video>
                     <div class="video-overlay" id="video-overlay">
