--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,7 +12,7 @@
     <!-- Geocoder CSS -->
     <link rel="stylesheet" href="{extensionPath}/scripts/leaflet/Control.Geocoder.css" />
 </head>
-<body style="zoom: 0.9; font-family: 'Inter', sans-serif; margin: 0; padding: 0; background-color: #1e293b; color: #e2e8f0;">
+<body style="zoom: 0.8; font-family: 'Inter', sans-serif; margin: 0; padding: 0; background-color: #1e293b; color: #e2e8f0;">
     <header class="header">
         <div style="display: flex; align-items: center; gap: 12px; justify-content: space-between; width: 100%;">
             <div style="display: flex; align-items: center; gap: 10px;">
@@ -59,7 +59,7 @@
     <main>
         <!-- Camera Tab -->
         <section class="tab-content active" id="tab-camera">
-            <section class="video-section fade-in">
+            <section class="video-section fade-in" style="display: flex; justify-content: space-between;">
                 <span style="color: gray; font-size: 0.8em;justify-content: center; display: flex;">Due to indexedDB limitation, this virtual camera only applies to {domain}</span>
                 <div class="video-wrapper">
                     <video id="video" controls muted loop playsinline></video>
@@ -69,7 +69,6 @@
                         <div class="video-placeholder-hint">Click "Load a video" to start</div>
                     </div>
                 </div>
-                <br>
                 <div class="controls-grid">
                     <button class="control-button" id="toggle-button">
                         <span>▶️</span>
@@ -128,7 +127,7 @@
 
         <!-- Proxy Tab -->
         <section class="tab-content" id="tab-proxy" style="display:none;">
-            <div class="proxy-section" style="padding: 32px; max-width: 500px; margin: 0 auto;">
+            <div class="proxy-section" style="padding: 32px; margin: 0 auto;">
                 <h2>Proxy</h2>
                 <form id="proxy-form" style="margin-top: 24px;">
                     <label>
@@ -159,7 +158,7 @@
 
         <!-- Browser Tab -->
         <section class="tab-content" id="tab-browser" style="display:none;">
-            <div class="useragent-section" style="padding:32px;max-width:600px;margin:0 auto;">
+            <div class="useragent-section" style="padding:32px;margin:0 auto;">
                 <h2>Browser</h2>
                 <form id="browser-form" style="margin-top:24px; display: flex; gap: 20px; flex-direction: column;">
                     <label>
@@ -231,7 +230,7 @@
 
         <!-- Advanced Tab -->
         <section class="tab-content-in-dev" id="tab-advanced" style="display:none;">
-            <div class="useragent-section" style="padding:32px;max-width:700px;margin:0 auto;">
+            <div class="useragent-section" style="padding:32px;margin:0 auto;">
                 <h2>Advanced spoofers</h2>
                 <form id="advanced-form" style="margin-top:24px;">
                     <label>WebGL Vendor<br>
