fix: Update display styles for settings and geolocation sections in popup

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -79,7 +79,7 @@
                     </button>
                 </div>
             </section>
-            <section class="settings-section fade-in" style="display: none;">
+            <section class="settings-section fade-in" style="display:none; justify-content: space-between;">
                 <div class="setting-row">
                     <div class="setting-label">Loop playback</div>
                     <div class="toggle-switch" id="loop-toggle"></div>
@@ -96,8 +96,8 @@
         </section>
 
         <!-- Geolocation Tab -->
-        <section class="tab-content" id="tab-geolocation" style="display:none;">
-            <div class="geo-section">
+        <section class="tab-content" id="tab-geolocation" style="display:none; justify-content: space-between;">
+            <div class="geo-section" style="display: flex; justify-content: space-between;">
                 <h2>Geolocation</h2>
                 <form id="geo-form">
                     <label>
@@ -121,7 +121,7 @@
 
         <!-- Proxy Tab -->
         <section class="tab-content" id="tab-proxy" style="display:none;">
-            <div class="proxy-section" style="padding: 32px; margin: 0 auto;">
+            <div class="proxy-section" style="padding: 32px; margin: 0 auto;display: flex; justify-content: space-between;">
                 <h2>Proxy</h2>
                 <form id="proxy-form" style="margin-top: 24px;">
                     <label>
@@ -152,7 +152,7 @@
 
         <!-- Browser Tab -->
         <section class="tab-content" id="tab-browser" style="display:none;">
-            <div class="useragent-section" style="padding:32px;margin:0 auto;">
+            <div class="useragent-section" style="padding:32px;margin:0 auto;display: flex; justify-content: space-between;">
                 <h2>Browser</h2>
                 <form id="browser-form" style="margin-top:24px; display: flex; gap: 20px; flex-direction: column;">
                     <label>
