fix: Update version to 1.0.5 and enhance virtual camera functionality

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="controls-grid">
-                    <button class="control-button" id="toggle-button">
+                    <button class="control-button" id="toggle-button" style="display: none;">
                         <span>▶️</span>
                         Enable camera
                     </button>
